# GtkSandbox

./: .gitignore  CMakeLists.txt  README.md
resources/: dlg_sample_a.glade  dlg_sample_b.glade  sandbox.glade  sandbox.gresource.xml  sandbox_child.glade
resources/style/: _sandbox_child_style.scss  _sandbox_window.scss  sandbox_style.scss
resources/style/scss/: _sandbox_child_style.scss  _sandbox_window.scss  sandbox_style.scss
src/: common_defs.h  globals.h  main.c  main.cpp  sandbox.glade  sandbox_child.glade  version.h.in  wndGladeMain.glade
src/controllers/: app_ctrl.c  app_ctrl.h  ctrl_samples.c
src/models/: app_model.c  app_model.h  model_device.c  model_device.h  model_samples.c  model_samples.h  model_workflow.c  model_workflow.h  search_worker.c  search_worker.h
src/utils/: logging.c  logging.h  os_interface.c  os_interface.h  parse_args.c  parse_args.h  sys_interface.c  sys_interface.h
src/views/: view_app_child.c  view_app_root.c  view_bound_toggles.c  view_bound_toggles.h  view_builder.c  view_builder.h  view_styler.c  view_styler.h  view_utils.c  view_utils.h
src/views/app_wnd/: app_view.c  app_view.h
src/views/button_box_tab/: dlg_sample_a.c  dlg_sample_a.h  view_bound_toggles.c  view_bound_toggles.h
src/views/child_wnd/: child_view.c  child_view.h
src/views/common/: view_builder.c  view_builder.h  view_styler.c  view_styler.h
src/views/misc_tab/: view_app_child.c  view_app_child.h
src/views/root/: view_app_root.c  view_app_root.h  view_msgout.c  view_msgout.h
src/views/samples_tab/: view_samples.c  view_samples.h
src/views/view_wizard/: view_wizard.c  view_wizard.h
